--- a/machine_learning/random_forest/rf_credit_data.ipynb
+++ b/machine_learning/random_forest/rf_credit_data.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,36 +31,30 @@
     "\n",
     "import os, sys\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../databases/credit_data.csv\")\n"
+    "df = pd.read_csv(\"../databases/credit_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[df.age < 0, \"age\"] = 40.92  # df.age[df.age > 0].mean())"
+    "df.loc[df.age < 0, \"age\"] = 40.92  # df.age[df.age > 0].mean())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +65,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 12
     }
    ],
    "source": [
@@ -80,7 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 2000 entries, 0 to 1999\nData columns (total 5 columns):\n #   Column      Non-Null Count  Dtype  \n---  ------      --------------  -----  \n 0   i#clientid  2000 non-null   int64  \n 1   income      2000 non-null   float64\n 2   age         1997 non-null   float64\n 3   loan        2000 non-null   float64\n 4   c#default   2000 non-null   int64  \ndtypes: float64(3), int64(2)\nmemory usage: 78.2 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +111,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>i#clientid</th>\n      <th>income</th>\n      <th>age</th>\n      <th>loan</th>\n      <th>c#default</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>2000.000000</td>\n      <td>2000.000000</td>\n      <td>1997.000000</td>\n      <td>2000.000000</td>\n      <td>2000.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>1000.500000</td>\n      <td>45331.600018</td>\n      <td>40.927689</td>\n      <td>4444.369695</td>\n      <td>0.141500</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>577.494589</td>\n      <td>14326.327119</td>\n      <td>13.261825</td>\n      <td>3045.410024</td>\n      <td>0.348624</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>1.000000</td>\n      <td>20014.489470</td>\n      <td>18.055189</td>\n      <td>1.377630</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>500.750000</td>\n      <td>32796.459717</td>\n      <td>29.072097</td>\n      <td>1939.708847</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>1000.500000</td>\n      <td>45789.117313</td>\n      <td>41.317159</td>\n      <td>3974.719419</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>1500.250000</td>\n      <td>57791.281668</td>\n      <td>52.587040</td>\n      <td>6432.410625</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>2000.000000</td>\n      <td>69995.685578</td>\n      <td>63.971796</td>\n      <td>13766.051239</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 14
     }
    ],
    "source": [
@@ -109,24 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 2000 entries, 0 to 1999\nData columns (total 5 columns):\n #   Column      Non-Null Count  Dtype  \n---  ------      --------------  -----  \n 0   i#clientid  2000 non-null   int64  \n 1   income      2000 non-null   float64\n 2   age         1997 non-null   float64\n 3   loan        2000 non-null   float64\n 4   c#default   2000 non-null   int64  \ndtypes: float64(3), int64(2)\nmemory usage: 78.2 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,39 +130,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
     "imputer = SimpleImputer(missing_values=np.nan, strategy=\"mean\")\n",
     "imputer = imputer.fit(previsores[:, 1:4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "previsores[:, 1:4] = imputer.transform(previsores[:, 1:4])\n"
+    "previsores[:, 1:4] = imputer.transform(previsores[:, 1:4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "previsores = scaler.fit_transform(previsores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "(\n",
     "    previsores_trainamento,\n",
     "    previsores_teste,\n",
@@ -179,25 +179,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0.982\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "decisionTree = DecisionTreeClassifier(criterion=\"entropy\", random_state=0)\n",
-    "decisionTree = decisionTree.fit(previsores_trainamento, classe_treinamento)\n",
-    "forecast = decisionTree.predict(previsores_teste)\n",
-    "precision = accuracy_score(classe_teste, forecast)\n",
-    "matrix = confusion_matrix(classe_teste, forecast)\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf = RandomForestClassifier(n_estimators=10, criterion=\"entropy\", random_state=0)\n",
+    "rf = rf.fit(previsores_trainamento, classe_treinamento)\n",
+    "forecast = rf.predict(previsores_teste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "\n",
-    "print(precision)"
+    "precision = accuracy_score(classe_teste, forecast)\n",
+    "matrix = confusion_matrix(classe_teste, forecast)"
    ]
   },
   {
