--- a/machine_learning/decision_tree/decision_tree_credit_risk.ipynb
+++ b/machine_learning/decision_tree/decision_tree_credit_risk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1329,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "boa             5\ndesconhecida    5\nruim            4\nName: historia, dtype: int64\nTotal: 14\n\nalta        8\nmoderado    3\nbaixa       3\nName: divida, dtype: int64\nTotal: 14\n\nnenhuma     11\nadequada     3\nName: garantias, dtype: int64\nTotal: 14\n\nacima_35    7\n15_35       4\n0_15        3\nName: renda, dtype: int64\nTotal: 14\n\nalto        6\nbaixo       5\nmoderado    3\nName: c#risco, dtype: int64\nTotal: 14\n\n"
+      "boa             5\ndesconhecida    5\nruim            4\nName: historia, dtype: int64\nTotal: 14\n\nbaixa    7\nalta     7\nName: divida, dtype: int64\nTotal: 14\n\nnenhuma     11\nadequada     3\nName: garantias, dtype: int64\nTotal: 14\n\nacima_35    7\n15_35       4\n0_15        3\nName: renda, dtype: int64\nTotal: 14\n\nalto        6\nbaixo       5\nmoderado    3\nName: risco, dtype: int64\nTotal: 14\n\n"
      ]
     }
    ],
@@ -50,117 +50,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1330,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "boa    5\nName: historia, dtype: int64\nalta        3\nmoderado    1\nbaixa       1\nName: divida, dtype: int64\nboa: 5 divida: 2 errors: 0.4\n"
+      "Boa: 5 Regras: se for boa então baixo Erro: 2/5\nDesconhecia: 5 Regras: se for desc então alto Erro: 3/5\nRuim: 4 Regras: se for ruim então alto Erro: 1/4\nTotal: 6/14\n"
      ]
     }
    ],
    "source": [
-    "# REGRA HISTORIA DE CRÉDITO - ATTRIBUTE BOA\n",
+    "# REGRA HISTORIA DE CRÉDITO - ALGORITHM ONER\n",
+    "col_historia = df.iloc[:, 0]\n",
+    "col_risco = df.iloc[:, 4]\n",
+    "col_merge = pd.DataFrame(col_historia).join(col_risco, lsuffix='_caller', rsuffix='_other')\n",
     "\n",
-    "attr_boa = df.iloc[:, 0:2].loc[df['historia'] == 'boa']\n",
-    "total_attr_divida_boa = pd.DataFrame(attr_boa)['divida'].value_counts().values.sum()\n",
+    "attr_boa = col_merge.loc[col_merge['historia'] == 'boa']\n",
+    "attr_risco_boa = pd.DataFrame(attr_boa)['risco'].value_counts()\n",
+    "attr_historia_boa = pd.DataFrame(attr_boa)['historia'].value_counts()\n",
     "\n",
-    "max_value_divida_boa = total_attr_divida_boa - pd.DataFrame(attr_boa)['divida'].value_counts().values.max()\n",
+    "attr_desc = col_merge.loc[col_merge['historia'] == 'desconhecida']\n",
+    "attr_risco_desc = pd.DataFrame(attr_desc)['risco'].value_counts()\n",
+    "attr_historia_desc= pd.DataFrame(attr_desc)['historia'].value_counts()\n",
     "\n",
-    "max_value_historia_boa = pd.DataFrame(attr_boa)['historia'].value_counts().values.max()\n",
-    "error_boa = max_value_divida_boa / max_value_historia_boa\n",
+    "attr_ruim = col_merge.loc[col_merge['historia'] == 'ruim']\n",
+    "attr_risco_ruim = pd.DataFrame(attr_ruim)['risco'].value_counts()\n",
+    "attr_historia_ruim = pd.DataFrame(attr_ruim)['historia'].value_counts()\n",
     "\n",
-    "for c in pd.DataFrame(attr_boa).columns:\n",
-    "    print('{0}'.format(pd.DataFrame(attr_boa)[c].value_counts()))\n",
+    "max_value_risco_boa = attr_risco_boa.values.sum() - attr_risco_boa.values.max()\n",
+    "max_value_risco_desc = attr_risco_desc.values.sum() - attr_risco_desc.values.max()\n",
+    "max_value_risco_ruim = attr_risco_ruim.values.sum() - attr_risco_ruim.values.max()\n",
     "\n",
-    "print(\"boa: {0} divida: {1} errors: {2}\"\n",
-    "    .format(max_value_historia_boa, max_value_divida_boa, error_boa))"
+    "rules_boa = \"se for boa então \" + attr_risco_boa.index[0]\n",
+    "rules_desc = \"se for desc então \" + attr_risco_desc.index[0]\n",
+    "rules_ruim = \"se for ruim então \" + attr_risco_ruim.index[0]\n",
+    "\n",
+    "max_value_historia_boa = attr_historia_boa.values.max()\n",
+    "max_value_historia_desc = attr_historia_desc.values.max()\n",
+    "max_value_historia_ruim = attr_historia_ruim.values.max()\n",
+    "\n",
+    "error_boa = max_value_risco_boa / max_value_historia_boa\n",
+    "error_desc = max_value_risco_desc / max_value_historia_desc\n",
+    "erro_ruim = max_value_risco_ruim / max_value_historia_ruim\n",
+    "\n",
+    "print(\n",
+    "    \"Boa: {0} Regras: {1} Erro: {2}/{3}\".format(\n",
+    "        max_value_historia_boa, rules_boa,\n",
+    "        max_value_risco_boa, max_value_historia_boa\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Desconhecia: {0} Regras: {1} Erro: {2}/{3}\".format(\n",
+    "        max_value_historia_desc, rules_desc,\n",
+    "        max_value_risco_desc, max_value_historia_desc\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Ruim: {0} Regras: {1} Erro: {2}/{3}\".format(\n",
+    "        max_value_historia_ruim, rules_ruim,\n",
+    "        max_value_risco_ruim, max_value_historia_ruim\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Total: {0}/{1}\".format((max_value_risco_boa + max_value_risco_desc + max_value_risco_ruim), col_historia.value_counts().values.sum()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1331,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "desconhecida    5\nName: historia, dtype: int64\nbaixa       2\nalta        2\nmoderado    1\nName: divida, dtype: int64\ndesconhecida: 5 divida: 3 errors: 0.6\n"
+      "Alta: 7 Regras: se for alta então alto Erro: 3/7\nBaixa: 7 Regras: se for baixa então baixo Erro: 4/7\nTotal: 7/14\n"
      ]
     }
    ],
    "source": [
-    "# REGRA HISTORIA DE CRÉDITO - ATTRIBUTE DESCONHECIA\n",
+    "# REGRA DIVIDA DE CRÉDITO - ALGORITHM ONER\n",
+    "col_divida = df.iloc[:, 1]\n",
+    "col_risco = df.iloc[:, 4]\n",
+    "col_merge = pd.DataFrame(col_divida).join(col_risco, lsuffix='_caller', rsuffix='_other')\n",
     "\n",
-    "attr_desc = df.iloc[:, 0:2].loc[df.historia == 'desconhecida']\n",
-    "total_attr_divida_desc = pd.DataFrame(attr_desc)['divida'].value_counts().values.sum()\n",
+    "attr_baixa = col_merge.loc[col_merge.divida == 'baixa']\n",
+    "attr_alta = col_merge.loc[col_merge.divida == 'alta']\n",
     "\n",
-    "max_value_divida_desc = total_attr_divida_desc - pd.DataFrame(attr_desc)['divida'].value_counts().values.max()\n",
+    "attr_risco_baixa = pd.DataFrame(attr_baixa).risco.value_counts()\n",
+    "attr_risco_alta = pd.DataFrame(attr_alta).risco.value_counts()\n",
+    "attr_divida_alta = pd.DataFrame(attr_alta).divida.value_counts()\n",
+    "attr_divida_baixa = pd.DataFrame(attr_baixa).divida.value_counts()\n",
     "\n",
-    "max_value_desc = pd.DataFrame(attr_desc)['historia'].value_counts().values.max()\n",
-    "error_desc = max_value_divida_desc / max_value_desc\n",
+    "max_value_risco_alta = attr_risco_alta.values.sum() - attr_risco_alta.values.max()\n",
+    "max_value_risco_baixa = attr_risco_baixa.values.sum() - attr_risco_baixa.values.max()\n",
+    "max_value_divida_alta = attr_divida_alta.values.max()\n",
+    "max_value_divida_baixa = attr_divida_baixa.values.max()\n",
     "\n",
-    "for c in pd.DataFrame(attr_desc).columns:\n",
-    "    print('{0}'.format(pd.DataFrame(attr_desc)[c].value_counts()))\n",
+    "rules_alta = \"se for alta então \" + attr_risco_alta.index[0]\n",
+    "rules_baixa = \"se for baixa então \" + attr_risco_baixa.index[0]\n",
     "\n",
-    "print(\"desconhecida: {0} divida: {1} errors: {2}\"\n",
-    "    .format(max_value_desc, max_value_divida_desc, error_desc))"
+    "error_alta = max_value_risco_alta / max_value_divida_alta\n",
+    "error_baixa = max_value_risco_baixa / max_value_divida_baixa\n",
+    "\n",
+    "print(\n",
+    "    \"Alta: {0} Regras: {1} Erro: {2}/{3}\".format(\n",
+    "        max_value_divida_alta, rules_alta,\n",
+    "        max_value_risco_alta, max_value_divida_alta\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Baixa: {0} Regras: {1} Erro: {2}/{3}\".format(\n",
+    "        max_value_divida_baixa, rules_baixa,\n",
+    "        max_value_risco_baixa, max_value_divida_baixa\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Total: {0}/{1}\".format((max_value_risco_alta + max_value_risco_baixa), col_divida.value_counts().values.sum()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "ruim    4\nName: historia, dtype: int64\nalta        3\nmoderado    1\nName: divida, dtype: int64\ndesconhecida: 4 divida: 1 errors: 0.25\n"
-     ]
-    }
-   ],
-   "source": [
-    "# REGRA HISTORIA DE CRÉDITO - ATTRIBUTE RUIM\n",
-    "attr_ruim = df.iloc[:, 0:2].loc[df.historia == 'ruim']\n",
-    "total_attr_divida_ruim = pd.DataFrame(attr_ruim)['divida'].value_counts().values.sum()\n",
-    "\n",
-    "max_value_divida_ruim = total_attr_divida_ruim - pd.DataFrame(attr_ruim)['divida'].value_counts().values.max()\n",
-    "\n",
-    "max_value_ruim = pd.DataFrame(attr_ruim)['historia'].value_counts().values.max()\n",
-    "error_ruim = max_value_divida_ruim / max_value_ruim\n",
-    "\n",
-    "for c in pd.DataFrame(attr_ruim).columns:\n",
-    "    print('{0}'.format(pd.DataFrame(attr_ruim)[c].value_counts()))\n",
-    "\n",
-    "print(\"desconhecida: {0} divida: {1} errors: {2}\"\n",
-    "    .format(max_value_ruim, max_value_divida_ruim, error_ruim))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "14\n"
-     ]
-    }
-   ],
-   "source": [
-    "# REGRA HISTORIA DE CRÉDITO - TOTAL DE ERROS\n",
-    "print((error_boa + error_desc + error_ruim) / df.historia.value_counts().values.sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 1332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1335,
    "metadata": {},
    "outputs": [],
    "source": [
