--- a/webcrawler-data-science/main.ipynb
+++ b/webcrawler-data-science/main.ipynb
@@ -2056,7 +2056,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('.venv': venv)",
+   "display_name": ".virtenv",
    "language": "python",
    "name": "python3"
   },
@@ -2070,12 +2070,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9 (main, Dec  7 2022, 13:47:07) [GCC 12.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9d0b661d29c8a07fec5417655ec45fd7f445e709452ff671571213b53f7fbb8c"
+    "hash": "ba8d7f511d8bc67dfdde966ff5fb1ec5dc3f82972ade794bfe454c3efce046b2"
    }
   }
  },
