--- a/data-science/main.ipynb
+++ b/data-science/main.ipynb
@@ -2017,7 +2017,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('.venv': venv)",
+   "display_name": ".venv2",
    "language": "python",
    "name": "python3"
   },
@@ -2031,12 +2031,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9 (main, Dec  7 2022, 13:47:07) [GCC 12.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3b8779661acc5eb8b82bd05438eb503d5928cd0381ef3f1d83993a6d75d0493a"
+    "hash": "8e1c291eaefcf53708c040eee71500eab9bbd2f13bc1a223bed33e3a18e0c57f"
    }
   }
  },
