--- a/mega-sena/mega-sena-ml.ipynb
+++ b/mega-sena/mega-sena-ml.ipynb
@@ -10417,7 +10417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".virtenv",
+   "display_name": ".venv3",
    "language": "python",
    "name": "python3"
   },
@@ -10431,12 +10431,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.1 (main, Dec 31 2022, 10:23:59) [GCC 12.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "07de5871f6e24fc0762e893331f1a2bcd5c6f5645e1a9f47fe5273fdcd8d6f2c"
+    "hash": "f0bc8a497609fe87e6bad32de43be55d317e47bb35934631917ff422bf67649a"
    }
   }
  },
