--- a/statistics/index-part-two.ipynb
+++ b/statistics/index-part-two.ipynb
@@ -3526,7 +3526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('.venv': venv)",
+   "display_name": ".venv3",
    "language": "python",
    "name": "python3"
   },
@@ -3540,11 +3540,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.1 (main, Dec 31 2022, 10:23:59) [GCC 12.2.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "3b8779661acc5eb8b82bd05438eb503d5928cd0381ef3f1d83993a6d75d0493a"
+    "hash": "f0bc8a497609fe87e6bad32de43be55d317e47bb35934631917ff422bf67649a"
    }
   }
  },
