--- a/classification/analise_site.ipynb
+++ b/classification/analise_site.ipynb
@@ -209,11 +209,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "556a2ac426a87100d24131df5df4cd6f08a8e50034730ea27cbc9e68ba3ead9c"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('.venv': venv)",
+   "display_name": ".venv3",
    "language": "python",
    "name": "python3"
   },
@@ -227,9 +224,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f0bc8a497609fe87e6bad32de43be55d317e47bb35934631917ff422bf67649a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
