--- a/webcrawler-data-science/main.ipynb
+++ b/webcrawler-data-science/main.ipynb
@@ -2056,7 +2056,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".virtenv",
+   "display_name": ".venv3",
    "language": "python",
    "name": "python3"
   },
@@ -2070,12 +2070,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Dec  7 2022, 13:47:07) [GCC 12.2.0]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ba8d7f511d8bc67dfdde966ff5fb1ec5dc3f82972ade794bfe454c3efce046b2"
+    "hash": "f0bc8a497609fe87e6bad32de43be55d317e47bb35934631917ff422bf67649a"
    }
   }
  },
