--- a/machine-learning-data-science/learning-bayes/base-census.ipynb
+++ b/machine-learning-data-science/learning-bayes/base-census.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Naive Bayes - Base Census\n",
+    "Accuracy 48%"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
     "import pickle\n",
     "\n",
     "from sklearn.naive_bayes import GaussianNB\n",
@@ -17,17 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(os.getcwd(), '..', 'pre-processing', 'base-census.pkl'), 'rb') as f:\n",
-    "    x_census_training, x_census_test, y_census_training, y_census_test = pickle.load(f)"
+    "with open(os.path.join(os.getcwd(), '..', 'file-pkl', 'base-census.pkl'), 'rb') as f:\n",
+    "    x_census_training, x_census_test, y_census_training, y_census_test = pickle.load(f)\n",
+    "    f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +45,7 @@
        "((27676, 108), (27676,))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +65,7 @@
        "((4885, 108), (4885,))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +97,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +118,7 @@
        "      dtype='<U6')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +140,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +160,7 @@
        "0.4767656090071648"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +181,7 @@
        "       [  35, 1157]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +201,7 @@
        "0.4767656090071648"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +244,9 @@
     }
    ],
    "source": [
+    "# recall - algoritmo consegue identificar corretamento\n",
+    "# precision - quando identifica um registro tem precisão\n",
+    "# f1-score - média harmônica entre precision e recall\n",
     "print(classification_report(y_census_test, predict))"
    ]
   }
