machine learning: random forest classifier

--- a/py_machine_learning_data_science/learning_bayes/base_census.ipynb
+++ b/py_machine_learning_data_science/learning_bayes/base_census.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(os.getcwd(), '..', 'file-pkl', 'base-census.pkl'), 'rb') as f:\n",
+    "with open(os.path.join(os.getcwd(), '..', 'file_pkl', 'base_census.pkl'), 'rb') as f:\n",
     "    x_census_training, x_census_test, y_census_training, y_census_test = pickle.load(f)\n",
     "    f.close()"
    ]
