feat: logistic regression

--- a/py_machine_learning_data_science/decision_tree/base_credito.ipynb
+++ b/py_machine_learning_data_science/decision_tree/base_credito.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join('..', 'file-pkl', 'base-creditcard.pkl'), 'rb') as f:\n",
+    "with open(os.path.join('..', 'file_pkl', 'base_credito.pkl'), 'rb') as f:\n",
     "    x_credit_training, x_credit_test, y_credit_training, y_credit_test = pickle.load(f)\n",
     "    f.close()"
    ]
