machine-learning: knn and svm

--- a/py_machine_learning_data_science/regressao_logistica/base_census.ipynb
+++ b/py_machine_learning_data_science/regressao_logistica/base_census.ipynb
@@ -19,7 +19,8 @@
     "import os\n",
     "import pickle\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, accuracy_score"
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from yellowbrick.classifier import ConfusionMatrix"
    ]
   },
   {
@@ -217,11 +218,15 @@
     }
    ],
    "source": [
-    "from yellowbrick.classifier import ConfusionMatrix\n",
     "cm = ConfusionMatrix(logistic_regression)\n",
     "cm.fit(x_census_training, y_census_training)\n",
     "cm.score(x_census_test, y_census_test)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
