--- a/py_reconhecimento_facial/facenet.ipynb
+++ b/py_reconhecimento_facial/facenet.ipynb
@@ -270,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('.venv': venv)",
+   "display_name": ".venv3",
    "language": "python",
    "name": "python3"
   },
@@ -284,12 +284,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "01c00ab95f5ecf7d82fd0eb72fa4c57e2bad76a7e60e2d0599a2c5a1a7ba63f9"
+    "hash": "f0bc8a497609fe87e6bad32de43be55d317e47bb35934631917ff422bf67649a"
    }
   }
  },
