--- a/py_analisador_sentimento/main.ipynb
+++ b/py_analisador_sentimento/main.ipynb
@@ -2672,7 +2672,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('.venv': venv)",
+   "display_name": ".venv3",
    "language": "python",
    "name": "python3"
   },
@@ -2686,12 +2686,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9d0b661d29c8a07fec5417655ec45fd7f445e709452ff671571213b53f7fbb8c"
+    "hash": "f0bc8a497609fe87e6bad32de43be55d317e47bb35934631917ff422bf67649a"
    }
   }
  },
