--- a/py_regressao_linear/main.ipynb
+++ b/py_regressao_linear/main.ipynb
@@ -1799,7 +1799,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('.venv': venv)",
+   "display_name": ".venv3",
    "language": "python",
    "name": "python3"
   },
@@ -1813,11 +1813,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "3b8779661acc5eb8b82bd05438eb503d5928cd0381ef3f1d83993a6d75d0493a"
+    "hash": "f0bc8a497609fe87e6bad32de43be55d317e47bb35934631917ff422bf67649a"
    }
   }
  },
